@@ -8703,6 +8703,148 @@ return|return
 name|request
 return|;
 block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|30000
+argument_list|,
+name|expected
+operator|=
+name|ApplicationNotFoundException
+operator|.
+name|class
+argument_list|)
+DECL|method|testShouldNotRetryForeverForNonNetworkExceptions ()
+specifier|public
+name|void
+name|testShouldNotRetryForeverForNonNetworkExceptions
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|YarnConfiguration
+name|conf
+init|=
+operator|new
+name|YarnConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RESOURCEMANAGER_CONNECT_MAX_WAIT_MS
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|ResourceManager
+name|rm
+init|=
+literal|null
+decl_stmt|;
+name|YarnClient
+name|yarnClient
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+comment|// start rm
+name|rm
+operator|=
+operator|new
+name|ResourceManager
+argument_list|()
+expr_stmt|;
+name|rm
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|rm
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|yarnClient
+operator|=
+name|YarnClient
+operator|.
+name|createYarnClient
+argument_list|()
+expr_stmt|;
+name|yarnClient
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|yarnClient
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+comment|// create invalid application id
+name|ApplicationId
+name|appId
+init|=
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|1430126768L
+argument_list|,
+literal|10645
+argument_list|)
+decl_stmt|;
+comment|// RM should throw ApplicationNotFoundException exception
+name|yarnClient
+operator|.
+name|getApplicationReport
+argument_list|(
+name|appId
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|yarnClient
+operator|!=
+literal|null
+condition|)
+block|{
+name|yarnClient
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|rm
+operator|!=
+literal|null
+condition|)
+block|{
+name|rm
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 end_class
 
