@@ -1148,17 +1148,6 @@ return|;
 block|}
 if|if
 condition|(
-name|waitForEver
-condition|)
-block|{
-return|return
-name|RetryPolicies
-operator|.
-name|RETRY_FOREVER
-return|;
-block|}
-if|if
-condition|(
 name|rmConnectionRetryIntervalMS
 operator|<
 literal|0
@@ -1181,6 +1170,24 @@ block|}
 name|RetryPolicy
 name|retryPolicy
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|waitForEver
+condition|)
+block|{
+name|retryPolicy
+operator|=
+name|RetryPolicies
+operator|.
+name|RETRY_FOREVER
+expr_stmt|;
+block|}
+else|else
+block|{
+name|retryPolicy
+operator|=
 name|RetryPolicies
 operator|.
 name|retryUpToMaximumTimeWithFixedSleep
@@ -1193,7 +1200,8 @@ name|TimeUnit
 operator|.
 name|MILLISECONDS
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 name|Map
 argument_list|<
 name|Class
